--- a/mcr_reports/i18n/fr.po
+++ b/mcr_reports/i18n/fr.po
@@ -1,15 +1,15 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* sale_management
 # 	* mcr_reports
 # 	* purchase
+# 	* sale_management
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 13.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-17 09:31+0000\n"
-"PO-Revision-Date: 2021-06-17 09:31+0000\n"
+"POT-Creation-Date: 2021-06-17 10:26+0000\n"
+"PO-Revision-Date: 2021-06-17 10:26+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -48,12 +48,12 @@ msgstr "${object.company_id.name} Commande (Ref ${object.name or 'n/d' })"
 #. module: mcr_reports
 #: model_terms:ir.ui.view,arch_db:mcr_reports.report_invoice_document_inherit
 msgid "&amp;nbsp;<span>on</span>"
-msgstr "&amp;nbsp;<span>sur</span>"
+msgstr ""
 
 #. module: mcr_reports
 #: model_terms:ir.ui.view,arch_db:mcr_reports.report_saleorder_document_inherit
 msgid "&amp;nbsp;<span>on</span>&amp;nbsp;"
-msgstr "&amp;nbsp;<span>sur</span>&amp;nbsp;"
+msgstr ""
 
 #. module: purchase
 #: model:ir.actions.report,print_report_name:purchase.report_purchase_quotation
@@ -438,20 +438,20 @@ msgstr "Activité d'exception de décoration"
 msgid "Activity State"
 msgstr "Status de l'activité"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model_terms:ir.ui.view,arch_db:purchase.purchase_order_form
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_template_view_form
 msgid "Add a note"
 msgstr "Ajouter une note"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model_terms:ir.ui.view,arch_db:purchase.purchase_order_form
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_form_quote
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_template_view_form
 msgid "Add a product"
 msgstr "Ajouter un produit"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model_terms:ir.ui.view,arch_db:purchase.purchase_order_form
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_template_view_form
 msgid "Add a section"
@@ -700,7 +700,7 @@ msgstr ""
 "Impossible de supprimer une ligne de commande d'achat qui est dans l'état "
 "'%s'."
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__product_uom_category_id
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__product_uom_category_id
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_template_line__product_uom_category_id
@@ -725,7 +725,7 @@ msgstr "Entité commerciale"
 msgid "Companies"
 msgstr "Sociétés"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_bill_union__company_id
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__company_id
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__company_id
@@ -753,7 +753,7 @@ msgstr ""
 msgid "Compose Email"
 msgstr "Rédiger un email"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model,name:purchase.model_res_config_settings
 #: model:ir.model,name:sale_management.model_res_config_settings
 msgid "Config Settings"
@@ -808,7 +808,7 @@ msgstr ""
 msgid "Control Policy"
 msgstr "Politique de contrôle"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,help:purchase.field_purchase_order_line__product_uom_category_id
 #: model:ir.model.fields,help:sale_management.field_sale_order_option__product_uom_category_id
 #: model:ir.model.fields,help:sale_management.field_sale_order_template_line__product_uom_category_id
@@ -856,7 +856,7 @@ msgstr "Créez des offres standardisées avec des articles par défaut"
 msgid "Create your quotation template"
 msgstr "Créer votre modèle de devis"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__create_uid
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__create_uid
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__create_uid
@@ -866,7 +866,7 @@ msgstr "Créer votre modèle de devis"
 msgid "Created by"
 msgstr "Créé par"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__create_date
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__create_date
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__create_date
@@ -934,7 +934,7 @@ msgstr ""
 "Représente la date où le devis devrait être validé et le converti en bon "
 "d'achat."
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__name
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__name
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_template_line__name
@@ -972,7 +972,7 @@ msgstr ""
 msgid "Discount (%)"
 msgstr "Remise (%)"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_bill_union__display_name
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__display_name
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__display_name
@@ -984,7 +984,7 @@ msgstr "Remise (%)"
 msgid "Display Name"
 msgstr "Afficher Nom"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__display_type
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_template_line__display_type
 msgid "Display Type"
@@ -1144,7 +1144,7 @@ msgstr ""
 msgid "ICE:"
 msgstr ""
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_bill_union__id
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__id
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__id
@@ -1295,7 +1295,7 @@ msgstr "Écriture comptable"
 msgid "Kpi All Sale Total Value"
 msgstr "Kpi Valeur Totale Des Ventes"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_bill_union____last_update
 #: model:ir.model.fields,field_description:purchase.field_purchase_order____last_update
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line____last_update
@@ -1307,7 +1307,7 @@ msgstr "Kpi Valeur Totale Des Ventes"
 msgid "Last Modified on"
 msgstr "Dernière modification le"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__write_uid
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__write_uid
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__write_uid
@@ -1317,7 +1317,7 @@ msgstr "Dernière modification le"
 msgid "Last Updated by"
 msgstr "Dernière mise à jour par"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__write_date
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__write_date
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__write_date
@@ -1533,7 +1533,7 @@ msgstr "Type d'activités à venir"
 msgid "No Message"
 msgstr "Aucun message"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields.selection,name:purchase.selection__purchase_order_line__display_type__line_note
 #: model_terms:ir.ui.view,arch_db:purchase.purchase_order_form
 #: model:ir.model.fields.selection,name:sale_management.selection__sale_order_template_line__display_type__line_note
@@ -1704,7 +1704,7 @@ msgstr "Commandes"
 #: model_terms:ir.ui.view,arch_db:mcr_reports.report_delivery_document_inherit
 #: model_terms:ir.ui.view,arch_db:mcr_reports.report_invoice_document_inherit
 msgid "Origin UE"
-msgstr ""
+msgstr "Origine UE"
 
 #. module: mcr_reports
 #: model:ir.model.fields,field_description:mcr_reports.field_res_partner__other_info_1
@@ -1779,7 +1779,7 @@ msgstr "Prix par fournisseur"
 msgid "Print RFQ"
 msgstr "Imprimer demande de prix"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model,name:purchase.model_product_product
 #: model:ir.model.fields,field_description:purchase.field_purchase_order__product_id
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__product_id
@@ -2072,7 +2072,7 @@ msgstr "Qté à facturer"
 msgid "Quantities billed by vendors"
 msgstr "Quantités facturées par les fournisseurs"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__product_qty
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__quantity
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_template_line__product_uom_qty
@@ -2080,7 +2080,7 @@ msgstr "Quantités facturées par les fournisseurs"
 msgid "Quantity"
 msgstr "Quantité"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model_terms:ir.ui.view,arch_db:purchase.purchase_order_form
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_form_quote
 msgid "Quantity:"
@@ -2410,7 +2410,7 @@ msgstr ""
 msgid "Secondary Logo (on reports)"
 msgstr ""
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields.selection,name:purchase.selection__purchase_order_line__display_type__line_section
 #: model:ir.model.fields.selection,name:sale_management.selection__sale_order_template_line__display_type__line_section
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_template_view_form
@@ -2462,7 +2462,7 @@ msgstr "Envoyer la commande par courriel"
 msgid "Send by Email"
 msgstr "Envoyer par email"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__sequence
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__sequence
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_template_line__sequence
@@ -2575,7 +2575,7 @@ msgstr ""
 msgid "Taxes:"
 msgstr "Taxes :"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,help:purchase.field_purchase_order_line__display_type
 #: model:ir.model.fields,help:sale_management.field_sale_order_template_line__display_type
 msgid "Technical field for UX purpose."
@@ -2757,7 +2757,7 @@ msgstr "Transfert"
 #. module: mcr_reports
 #: model:ir.model.fields,field_description:mcr_reports.field_account_move__picking_ids
 msgid "Transfers"
-msgstr "Transferts"
+msgstr ""
 
 #. module: mcr_reports
 #: model:ir.model.fields,field_description:mcr_reports.field_account_move__invoice_type
@@ -2779,7 +2779,7 @@ msgstr ""
 "Impossible d'annuler cette commande d'achat. Vous devez d'abord annuler la "
 "facture fournisseur liée à cette commande."
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__price_unit
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_option__price_unit
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_template_line__price_unit
@@ -2789,13 +2789,13 @@ msgstr ""
 msgid "Unit Price"
 msgstr "Prix unitaire"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model_terms:ir.ui.view,arch_db:purchase.purchase_order_form
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_form_quote
 msgid "Unit Price:"
 msgstr "Prix unitaire :"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model:ir.model.fields,field_description:purchase.field_purchase_order_line__product_uom
 #: model:ir.model.fields,field_description:sale_management.field_sale_order_template_line__product_uom_id
 msgid "Unit of Measure"
@@ -2853,7 +2853,7 @@ msgstr "Montant hors-taxe :"
 msgid "Untaxed Total"
 msgstr "Total HT"
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: model_terms:ir.ui.view,arch_db:purchase.purchase_order_form
 #: model_terms:ir.ui.view,arch_db:sale_management.sale_order_form_quote
 msgid "UoM"
@@ -3059,7 +3059,7 @@ msgstr ""
 "Vous devez définir un produit pour tout ce que vous vendez ou achetez,\n"
 "            qu'il s'agisse d'un produit stockable, consommable ou d'un service."
 
-#. modules: sale_management, purchase
+#. modules: purchase, sale_management
 #: code:addons/purchase/models/purchase.py:0
 #: code:addons/sale_management/models/sale_order.py:0
 #, python-format
